# sphinx-redirect-by-id

./: .gitignore  Makefile  README.md  pyproject.toml
example/: Makefile
example/source/: conf.py  cpage.rst  cpppage.rst
redirect_by_id/: __init__.py
source/: conf.py  cpage.rst  cpppage.rst  index.rst  pypage.rst
source/_static/: redirecttools.js
source/_templates/: redirect.html
source/extensions/redirect_by_id/: redirect.html_t
sphinx_redirect_by_id/: __init__.py  redirect.html_t  redirecttools.js
