[project]
name = "sphinx-redirect-by-id"
version = "0.1.3"
authors = [
	{ name="Jakob Lykke Andersen", email="Jakob@caput.dk" },
]
description = "A Sphinx extension to provide redirection to an entity by its ID."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
	"Framework :: Sphinx :: Extension",
]

dependencies = [
	"sphinx>=5.0",
]

[project.urls]
"Homepage" = "https://github.com/jakobandersen/sphinx-redirect-by-id"
"Bug Tracker" = "https://github.com/jakobandersen/sphinx-redirect-by-id/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sphinx_redirect_by_id = ["*.html_t", "*.js"]
